# QtWithDotNet

./: CMakeLists.txt  README.md  dotnetform.cpp  dotnetform.h  main.cpp  widget.cpp  widget.ui
